--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <div class="calendar-wrapper"></div>
-<script src="http://code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
+<script src="node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script>
+<script src="node_modules/lodash/lodash.min.js" type="text/javascript"></script>
+<script src="node_modules/moment/min/moment.min.js" type="text/javascript"></script>
 <!-- optional: insert your libraries here -->
 <script src="calendar.js" type="text/javascript"></script>
 <script>
